Refactor reductions